# desafio-controlid

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  main.cpp
meta-controlid/: README
meta-controlid/recipes-controlid/postsprinter/: postsprinter_1.0.bb
