
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.60)
AC_INIT(postprinter, 0.1, italocsampaio@gmail.com)
AC_CONFIG_SRCDIR([main.cpp])
AM_INIT_AUTOMAKE(postprinter, main)

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_PROG_MAKE_SET
AC_PROG_CXX
AC_LANG(C++)

CXXFLAGS="-std=c++11"

# Checks for libraries.
AM_PROG_LIBTOOL

# Set shared libraries
AC_DISABLE_STATIC
AC_ENABLE_SHARED

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
